# ElephantCrush

./: .gitignore  Build ElephantCrush.command  CMakeLists.txt  GITHUB_LISTING.md  LICENSE  Publish to GitHub.command  README.md
.github/: FUNDING.yml
Source/: CrusherDSP.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h
